--- a/export/talks.html
+++ b/export/talks.html
@@ -1,6 +1,6 @@
 <div class="talks" data-js-id="talks">
     <header>
-        <img src="/feri.jpg" alt="Farzad Yousefzadeh" />
+        <img src="/assets/feri.jpg" alt="Farzad Yousefzadeh" />
         <h1>Farzad Yousefzadeh</h1>
         <nav>
             <ul>
@@ -11,26 +11,33 @@
             </ul>
             <a>Follow @farzad_yz on Twitter</a>
         </nav>
-    </header>    <p>TTTTTTTEST</p>
-    <h1>The life of a software developer in Finland @ CoderConf 2018</h1>
-    <h1>The state of Frontend development (Software Talks) @ Software Talks 2018</h1>
-    <h1>Test Driven Development (Software Talks) @ Software Talks 2018</h1>
-    <h1>React without React @ Futurice Tech weeklies 2018</h1>
-    <h1>Headless React @ ReactJS Community 2018</h1>
-    <h1>Boost state containment with Redux Observables @ React Helsinki 2019</h1>
-    <h1>Statecharts driven UI development @ ReactJS community 2019</h1>
-    <h1>Abstract component modeling in React @ React Finland 2019</h1>
-    <h1>React Hooks vs Reactive Statecharts @ React Helsinki June, 2019</h1>
-    <h1>React Hooks vs Reactive Statecharts @ TampereJS, 2019</h1>
-    <h1>Explicitness and Consistency in UI @ Futurice Tech weeklies 2019</h1>
-    <h1>Introduction to modeling with Finite state machines @ GDG Helsinki 2019</h1>
-    <h1>The art of explicit and consistent user interfaces @ 404Fest 2019</h1>
-    <h1> Tackle React component complexity using Reactive Statecharts @ ReactJS Day Italy 2019</h1>
-    <h1>The art of explicit and consistent user interfaces v2 @ HolysJS Moscow 2019</h1>
-    <h1>In Pursuit of Finite States @ SkyHacks Poland 2019</h1>
-    <h1>Experiments with State machines and Overmind @ Christian Alfoni</h1>
-    <h1>So you think you know state management?</h1>
-    <section class="talk-head">
+    </header>
+    <link rel="stylesheet" href="//unpkg.com/@highlightjs/cdn-assets@10.5.0/styles/atom-one-dark.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400&family=IBM+Plex+Serif:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <style>
+        body {
+            font-family: 'IBM Plex Sans',
+                sans-serif;
+        }
+    
+        pre,
+        code {
+            font-family: 'IBM Plex Mono',
+                monospace;
+        }
+    
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: 'IBM Plex Serif',
+        }
+    </style>    <section class="talk-head">
         <h3 class="talk-title"><a target="_blank" rel="nofollow">The life of a software developer in Finland @ CoderConf 2018</a></h3>
         <div class="visible-mobile"><a href="" target="_blank" rel="nofollow"
                 class="preview-link">Check out <strong>Slides</strong> of this talk</a></div>
@@ -799,6 +806,54 @@
         </div>
     </section>
     <section class="talk-head">
+        <h3 class="talk-title"><a target="_blank" rel="nofollow">A hitchhiker&#x27;s guide to Svelte JS @ HelsinkiJS Meetup 2019</a></h3>
+        <div class="visible-mobile"><a href="https://slides.com/farzadyz/a-hitchhikers-guide-to-sveltejs/embed?style&#x3D;light" target="_blank" rel="nofollow"
+                class="preview-link">Check out <strong>Slides</strong> of this talk</a></div>
+        <div class="preview hidden-mobile">
+            <nav class="preview-tabs"><button class="preview-tab active">Slides</button></nav>
+            <div class="preview-content">
+                <div class="hidden-mobile hidden-print"
+                    style="padding-bottom: 56.25%; background-color: rgb(238, 238, 238); position: relative;"><iframe
+                        src="https://slides.com/farzadyz/a-hitchhikers-guide-to-sveltejs/embed?style&#x3D;light" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen="" scrolling="no"
+                        style="display: block; width: 100%; height: 100%; margin-bottom: 0px; position: absolute; top: 0px; left: 0px;"></iframe>
+                </div>
+            </div>
+            <div dir="ltr" class="resize-sensor"
+                style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                <div class="resize-sensor-expand"
+                    style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                    <div
+                        style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 558px; height: 352px;">
+                    </div>
+                </div>
+                <div class="resize-sensor-shrink"
+                    style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                    <div
+                        style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 200%; height: 200%;">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p style="margin: 1em 0px; line-height: 2;">It&#x27;s been a while since SvelteJS was introduced as yet another Javascript solution to build fast and robust web applications. in this talk, we&#x27;ll dive into what svelte is and try to fashion a high level understanding of its building blocks. if you don&#x27;t know Svelte yet or you&#x27;ve heard of it but haven&#x27;t had the chance to get to know it yet, fear not, I&#x27;m like you. let&#x27;s do it together.</p>
+        <div dir="ltr" class="resize-sensor"
+            style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+            <div class="resize-sensor-expand"
+                style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                <div
+                    style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 560px; height: 721px;">
+                </div>
+            </div>
+            <div class="resize-sensor-shrink"
+                style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                <div
+                    style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 200%; height: 200%;">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="talk-head">
         <h3 class="talk-title"><a target="_blank" rel="nofollow">Experiments with State machines and Overmind @ Christian Alfoni</a></h3>
         <div class="visible-mobile"><a href="" target="_blank" rel="nofollow"
                 class="preview-link">Check out <strong>Slides</strong> of this talk</a></div>
@@ -830,6 +885,102 @@
             </div>
         </div>
         <p style="margin: 1em 0px; line-height: 2;">A friendly dev chat with Christian Alfoni about supporting Finite state machines in Overmind which is a tool Christian is working on actively</p>
+        <div dir="ltr" class="resize-sensor"
+            style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+            <div class="resize-sensor-expand"
+                style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                <div
+                    style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 560px; height: 721px;">
+                </div>
+            </div>
+            <div class="resize-sensor-shrink"
+                style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                <div
+                    style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 200%; height: 200%;">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="talk-head">
+        <h3 class="talk-title"><a target="_blank" rel="nofollow">Podcast Guest @ Devchat (React Roundup) Podcast</a></h3>
+        <div class="visible-mobile"><a href="" target="_blank" rel="nofollow"
+                class="preview-link">Check out <strong>Slides</strong> of this talk</a></div>
+        <div class="preview hidden-mobile">
+            <nav class="preview-tabs"><button class="preview-tab active">Slides</button></nav>
+            <div class="preview-content">
+                <div class="hidden-mobile hidden-print"
+                    style="padding-bottom: 56.25%; background-color: rgb(238, 238, 238); position: relative;"><iframe
+                        src="" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen="" scrolling="no"
+                        style="display: block; width: 100%; height: 100%; margin-bottom: 0px; position: absolute; top: 0px; left: 0px;"></iframe>
+                </div>
+            </div>
+            <div dir="ltr" class="resize-sensor"
+                style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                <div class="resize-sensor-expand"
+                    style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                    <div
+                        style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 558px; height: 352px;">
+                    </div>
+                </div>
+                <div class="resize-sensor-shrink"
+                    style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                    <div
+                        style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 200%; height: 200%;">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p style="margin: 1em 0px; line-height: 2;">A podcast episode and a friendly chat around my talk at React finland 2019 on using state machines to model UI behavior abstractly</p>
+        <div dir="ltr" class="resize-sensor"
+            style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+            <div class="resize-sensor-expand"
+                style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                <div
+                    style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 560px; height: 721px;">
+                </div>
+            </div>
+            <div class="resize-sensor-shrink"
+                style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                <div
+                    style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 200%; height: 200%;">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="talk-head">
+        <h3 class="talk-title"><a target="_blank" rel="nofollow">Podcast Guest @ Webbidevaus Podcast</a></h3>
+        <div class="visible-mobile"><a href="" target="_blank" rel="nofollow"
+                class="preview-link">Check out <strong>Slides</strong> of this talk</a></div>
+        <div class="preview hidden-mobile">
+            <nav class="preview-tabs"><button class="preview-tab active">Slides</button></nav>
+            <div class="preview-content">
+                <div class="hidden-mobile hidden-print"
+                    style="padding-bottom: 56.25%; background-color: rgb(238, 238, 238); position: relative;"><iframe
+                        src="" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen="" scrolling="no"
+                        style="display: block; width: 100%; height: 100%; margin-bottom: 0px; position: absolute; top: 0px; left: 0px;"></iframe>
+                </div>
+            </div>
+            <div dir="ltr" class="resize-sensor"
+                style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                <div class="resize-sensor-expand"
+                    style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                    <div
+                        style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 558px; height: 352px;">
+                    </div>
+                </div>
+                <div class="resize-sensor-shrink"
+                    style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
+                    <div
+                        style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 200%; height: 200%;">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p style="margin: 1em 0px; line-height: 2;">A podcast episode about React finland 2019 state management talk sections</p>
         <div dir="ltr" class="resize-sensor"
             style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
             <div class="resize-sensor-expand"
